# ai-lab

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.cursor/rules/: advisor.mdc  ai-lab.mdc
.cursor/skills/learn/: SKILL.md
.cursor/skills/ship/: SKILL.md
.github/workflows/: ci.yml
docs/: learn-pi.md  learning-path.md
docs/concepts/: .gitkeep  CONCEPT-0000-template.md  CONCEPT-tokenization.md  README.md
docs/learn-pi/: ai-lab-track.seed.json
docs/limitations/: LL-0000-template.md  README.md
lab/01-foundations/: README.md  notes.md
lab/01-foundations/exercises/: 01-tokenization.md  01_tokenization.py  02-attention-by-hand.md
lab/02-inference/: README.md
lab/03-training/: README.md
lab/04-evals/: README.md
lab/05-interpretability/: README.md
lab/06-agents/: README.md
lab/07-frontier/: README.md  notes.md
lab/07-frontier/exercises/: 01-modern-stack-map.md  02-architecture-in-the-wild.md  03-post-training-compare.md  04-test-time-compute.md  05-research-proposal.md
notebooks/: .gitkeep
research/experiments/: EXP-0000-template.md  README.md
research/findings/: README.md
research/techniques/: README.md  TECH-0000-template.md
tests/: test_smoke.py
tools/python/llab/: README.md  __init__.py  cli.py  client.py  eval.py  models.py  probes.py  sample.jsonl
tools/ts/llab/: README.md  agent.ts  cli.ts  client.ts  eval.ts  index.ts
